--- a/Savio/PINViewController/SAEnterYourPINViewController.xib
+++ b/Savio/PINViewController/SAEnterYourPINViewController.xib
@@ -7,9 +7,9 @@
     <customFonts key="customFonts">
         <mutableArray key="GothamRounded-Light.otf">
             <string>GothamRounded-Light</string>
-            <string>GothamRounded-Light</string>
         </mutableArray>
         <mutableArray key="GothamRounded-Medium.otf">
+            <string>GothamRounded-Medium</string>
             <string>GothamRounded-Medium</string>
         </mutableArray>
         <mutableArray key="gotham-rounded-book-2.otf">
@@ -54,17 +54,17 @@
                         <constraint firstAttribute="width" constant="40" id="YSf-4T-5lF"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your passcode to login" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kS9-iG-teh">
-                    <rect key="frame" x="30" y="102" width="540" height="20"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your passcode to login" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kS9-iG-teh">
+                    <rect key="frame" x="30" y="102" width="540" height="150"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="20" id="FcF-HB-T5M"/>
+                        <constraint firstAttribute="height" constant="150" id="FcF-HB-T5M"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="GothamRounded-Light" family="Gotham Rounded" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                    <fontDescription key="fontDescription" name="GothamRounded-Medium" family="Gotham Rounded" pointSize="33"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your passcode does't match" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hME-bb-vkK">
-                    <rect key="frame" x="180" y="125" width="240" height="20"/>
+                    <rect key="frame" x="180" y="250" width="240" height="20"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="20" id="KWs-uU-040"/>
                         <constraint firstAttribute="width" constant="240" id="tr0-uZ-uP4"/>
@@ -74,7 +74,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="We'll send you a code to unlock your account" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WBk-LD-bTU">
-                    <rect key="frame" x="213" y="283" width="175" height="40"/>
+                    <rect key="frame" x="213" y="372" width="175" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="175" id="e6J-D1-bOG"/>
                         <constraint firstAttribute="height" constant="40" id="ptG-nv-Uv3"/>
@@ -84,7 +84,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yO2-Dv-Fci">
-                    <rect key="frame" x="270" y="420" width="61" height="30"/>
+                    <rect key="frame" x="270" y="509" width="61" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="2hE-tg-R8U"/>
                         <constraint firstAttribute="width" constant="61" id="d5e-rs-Svj"/>
@@ -105,7 +105,7 @@
                     </connections>
                 </button>
                 <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8My-tM-w3z">
-                    <rect key="frame" x="30" y="348" width="540" height="43"/>
+                    <rect key="frame" x="30" y="437" width="540" height="43"/>
                     <color key="backgroundColor" red="0.96862745098039216" green="0.58039215686274503" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="43" id="42p-eW-gpk"/>
@@ -117,7 +117,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YRO-Ha-Z4h">
-                    <rect key="frame" x="215" y="287" width="170" height="30"/>
+                    <rect key="frame" x="215" y="412" width="170" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="1Eb-DD-LYf"/>
                         <constraint firstAttribute="width" constant="170" id="A3Q-YT-esL"/>
@@ -138,7 +138,7 @@
                     </connections>
                 </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ng-Ts-N3O">
-                    <rect key="frame" x="30" y="348" width="540" height="40"/>
+                    <rect key="frame" x="30" y="437" width="540" height="40"/>
                     <color key="backgroundColor" red="0.95686274509803915" green="0.69019607843137254" blue="0.23137254901960785" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="XSn-tm-oQo"/>
@@ -152,7 +152,7 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XRg-0T-Rrk">
-                    <rect key="frame" x="30" y="229" width="540" height="42"/>
+                    <rect key="frame" x="30" y="354" width="540" height="42"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oLD-AK-Fy3">
                             <rect key="frame" x="0.0" y="0.0" width="540" height="40"/>
@@ -178,7 +178,7 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zjE-hy-Y04">
-                    <rect key="frame" x="179" y="143" width="242" height="66"/>
+                    <rect key="frame" x="179" y="268" width="242" height="66"/>
                     <subviews>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uli-2s-Dpu">
                             <rect key="frame" x="16" y="15" width="35" height="35"/>
@@ -287,10 +287,11 @@
                 <constraint firstItem="kS9-iG-teh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="Tjb-wJ-7Vh"/>
                 <constraint firstItem="XRg-0T-Rrk" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="30" id="VCW-9D-CXf"/>
                 <constraint firstAttribute="trailing" secondItem="kS9-iG-teh" secondAttribute="trailing" constant="30" id="Zud-49-Nys"/>
-                <constraint firstItem="hME-bb-vkK" firstAttribute="top" secondItem="OTi-RR-xfC" secondAttribute="bottom" constant="35" id="e7I-lE-lBF"/>
+                <constraint firstItem="hME-bb-vkK" firstAttribute="top" secondItem="OTi-RR-xfC" secondAttribute="bottom" constant="160" id="e7I-lE-lBF"/>
                 <constraint firstItem="YRO-Ha-Z4h" firstAttribute="top" secondItem="XRg-0T-Rrk" secondAttribute="bottom" constant="16" id="fhR-EA-E4n"/>
                 <constraint firstItem="1ng-Ts-N3O" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="31" id="hZ3-0N-1sh"/>
                 <constraint firstAttribute="trailing" secondItem="XRg-0T-Rrk" secondAttribute="trailing" constant="30" id="hlo-tU-fCH"/>
+                <constraint firstItem="1ng-Ts-N3O" firstAttribute="top" secondItem="WBk-LD-bTU" secondAttribute="bottom" constant="25" id="iz1-cO-8e4"/>
                 <constraint firstItem="uH3-CJ-3vG" firstAttribute="top" secondItem="OTi-RR-xfC" secondAttribute="bottom" constant="5" id="kAa-ix-lHM"/>
                 <constraint firstAttribute="trailing" secondItem="1ng-Ts-N3O" secondAttribute="trailing" constant="30" id="n2S-k8-Sao"/>
                 <constraint firstItem="yO2-Dv-Fci" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="o1g-d8-2Ar"/>
@@ -298,8 +299,13 @@
                 <constraint firstItem="WBk-LD-bTU" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="pun-GM-lA0"/>
                 <constraint firstItem="XRg-0T-Rrk" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tRt-Bt-AEy"/>
                 <constraint firstItem="8My-tM-w3z" firstAttribute="top" secondItem="WBk-LD-bTU" secondAttribute="bottom" constant="25" id="vy6-9D-Rbp"/>
-                <constraint firstItem="WBk-LD-bTU" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="-34" id="wVQ-8J-Vmk"/>
+                <constraint firstItem="WBk-LD-bTU" firstAttribute="top" secondItem="YRO-Ha-Z4h" secondAttribute="bottom" constant="-70" id="wVQ-8J-Vmk"/>
             </constraints>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="hZ3-0N-1sh"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="343" y="260"/>
         </view>
         <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="dVV-Qb-gor">
