--- a/Savio/PINViewController/SAEnterYourPINViewController.xib
+++ b/Savio/PINViewController/SAEnterYourPINViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -270,6 +270,7 @@
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <gestureRecognizers/>
             <constraints>
                 <constraint firstItem="1ng-Ts-N3O" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="0Xy-Zh-ixq"/>
                 <constraint firstItem="uH3-CJ-3vG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="2YC-Mf-lvc"/>
@@ -306,6 +307,9 @@
                     <exclude reference="hZ3-0N-1sh"/>
                 </mask>
             </variation>
+            <connections>
+                <outletCollection property="gestureRecognizers" destination="Sh6-nY-ihL" appends="YES" id="jmR-7D-SPq"/>
+            </connections>
             <point key="canvasLocation" x="343" y="260"/>
         </view>
         <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="dVV-Qb-gor">
@@ -320,6 +324,11 @@
                 </barButtonItem>
             </items>
         </toolbar>
+        <tapGestureRecognizer id="Sh6-nY-ihL">
+            <connections>
+                <action selector="bgViewTapped:" destination="-1" id="PCO-o8-6wt"/>
+            </connections>
+        </tapGestureRecognizer>
     </objects>
     <resources>
         <image name="savivo-logo.png" width="85" height="85"/>
