--- a/Savio/ProgressView/SAGroupProgressViewController.xib
+++ b/Savio/ProgressView/SAGroupProgressViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -148,6 +148,7 @@
                                     <rect key="frame" x="0.0" y="40" width="600" height="348"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="190" id="XOO-Gc-ITl"/>
+                                        <constraint firstAttribute="height" constant="348" id="w8j-a1-L46"/>
                                     </constraints>
                                     <variation key="default">
                                         <mask key="constraints">
@@ -191,6 +192,7 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
+                                <constraint firstItem="Ihf-ot-vbi" firstAttribute="top" secondItem="Jc8-Fd-CSw" secondAttribute="bottom" constant="3" id="87i-mX-eIG"/>
                                 <constraint firstItem="gf6-nN-cap" firstAttribute="centerX" secondItem="alJ-QQ-JNZ" secondAttribute="centerX" id="DJv-40-i6d"/>
                                 <constraint firstItem="Rxj-TM-ht8" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" constant="20" id="DMd-oH-uuv"/>
                                 <constraint firstItem="Rxj-TM-ht8" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" id="FVE-6F-XZS"/>
@@ -203,10 +205,12 @@
                                 <constraint firstAttribute="trailing" secondItem="c4S-KN-7rD" secondAttribute="trailing" id="cnA-4G-Nla"/>
                                 <constraint firstAttribute="trailing" secondItem="Rxj-TM-ht8" secondAttribute="trailing" constant="20" id="dgt-Qf-DZV"/>
                                 <constraint firstAttribute="height" constant="450" id="gqc-Mi-sis"/>
+                                <constraint firstItem="Jc8-Fd-CSw" firstAttribute="top" secondItem="gf6-nN-cap" secondAttribute="bottom" constant="-7" id="irQ-Qi-hj0"/>
+                                <constraint firstItem="gf6-nN-cap" firstAttribute="top" secondItem="c4S-KN-7rD" secondAttribute="bottom" constant="-12" id="izZ-sy-XPp"/>
                                 <constraint firstItem="Jc8-Fd-CSw" firstAttribute="leading" secondItem="alJ-QQ-JNZ" secondAttribute="leading" constant="30" id="jBd-pY-nZd"/>
                                 <constraint firstItem="Rxj-TM-ht8" firstAttribute="top" secondItem="alJ-QQ-JNZ" secondAttribute="top" id="mhJ-aS-s5H"/>
                                 <constraint firstItem="Ihf-ot-vbi" firstAttribute="top" secondItem="Jc8-Fd-CSw" secondAttribute="bottom" constant="3" id="rw7-CC-x2r"/>
-                                <constraint firstAttribute="bottom" secondItem="Ihf-ot-vbi" secondAttribute="bottom" constant="-5" id="s4v-hM-dfI"/>
+                                <constraint firstAttribute="bottom" secondItem="Ihf-ot-vbi" secondAttribute="bottom" id="s4v-hM-dfI"/>
                                 <constraint firstItem="Ihf-ot-vbi" firstAttribute="top" secondItem="gf6-nN-cap" secondAttribute="bottom" constant="17" id="xJ8-b1-8x2"/>
                                 <constraint firstAttribute="trailing" secondItem="Jc8-Fd-CSw" secondAttribute="trailing" constant="30" id="xW1-Tg-Ngd"/>
                                 <constraint firstItem="Jc8-Fd-CSw" firstAttribute="top" secondItem="c4S-KN-7rD" secondAttribute="bottom" constant="18" id="xhb-gx-4iT"/>
@@ -214,6 +218,11 @@
                             <variation key="default">
                                 <mask key="constraints">
                                     <exclude reference="mhJ-aS-s5H"/>
+                                    <exclude reference="xhb-gx-4iT"/>
+                                    <exclude reference="V57-TJ-wHa"/>
+                                    <exclude reference="rw7-CC-x2r"/>
+                                    <exclude reference="s4v-hM-dfI"/>
+                                    <exclude reference="xJ8-b1-8x2"/>
                                 </mask>
                             </variation>
                         </view>
