--- a/Savio/RegistrationViewController/SARegistrationScreenOneViewController.xib
+++ b/Savio/RegistrationViewController/SARegistrationScreenOneViewController.xib
@@ -105,7 +105,7 @@
                                         <outlet property="delegate" destination="-1" id="qzA-F8-AcB"/>
                                     </connections>
                                 </textField>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bq9-l7-AWt">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bq9-l7-AWt">
                                     <rect key="frame" x="30" y="164" width="540" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="obM-Wg-Q5a"/>
